# exercicio-18-06

./: README.md  docker-compose.yml  pyproject.toml
base/: tests.py
base/static/css/: styles.css
base/templates/: base.html
base/templates/partials/: menu.html  rodape.html
financa/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
financa/migrations/: 0001_initial.py
financa/templates/: financa_list.html
financa/tests/: test_models.py  test_serializers.py  test_views_templates.py  tests.py
scripts/: run.sh
setup/: settings.py  urls.py
